--- a/package.xml
+++ b/package.xml
@@ -2,9 +2,10 @@
 <package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
     <name>FCPDWorkbench</name>
     <description>A FreeCAD workbench to use Pure-Data as a graphical macro langage.</description>
-    <version>0.3.0</version>
+    <version>0.3.1</version>
+    <date>2025-04-14</date>
     <maintainer email="ffw@2f2v.fr">Florian Foinant-Willig</maintainer>
-    <license file="LICENSE">GPLv3</license>
+    <license file="LICENSE">GPL-3.0-or-later</license>
     <url type="repository" branch="main">https://github.com/FlachyJoe/FCPDWorkbench</url>
     <icon>resources/icons/FCPDLogo.svg</icon>
 
@@ -16,7 +17,7 @@
             <subdirectory>./</subdirectory>
             <icon>resources/icons/FCPDLogo.svg</icon>
             <tag>developers</tag>
-            <version>0.3.0</version>
+            <version>0.3.1</version>
         </workbench>
 
         <depend optional="true" type="python">ikpy</depend>
